--- a/signal_acc/signal_acc.sim/sim_1/behav/xsim/xsim.dir/mb_design_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/signal_acc/signal_acc.sim/sim_1/behav/xsim/xsim.dir/mb_design_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Sep  7 16:17:13 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Sep  7 22:54:03 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>85ed17ee577844fa919277aa417f6c4a</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>f4231c13-496c-44a2-a249-d9582691b389</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>f4231c13-496c-44a2-a249-d9582691b389</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>38</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>e83bd208-a44e-48ca-8edc-4c2ffa8da84e</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>e83bd208-a44e-48ca-8edc-4c2ffa8da84e</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>not_applicable</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>not_applicable</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>AMD Ryzen 7 4700U with Radeon Graphics         </TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1996 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i3-6100U CPU @ 2.30GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2304 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -35,17 +35,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
+    <TD>debug=typical</TD>
+    <TD>dpi_used=false</TD>
+    <TD>file_counter=83</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
+    <TD>hwcosim=false</TD>
+    <TD>sdfmodeling=false</TD>
+    <TD>vhdl2008=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=60</TD>
-    <TD>runtime=51 us</TD>
-    <TD>simulation_memory=27916_KB</TD>
-    <TD>simulation_time=4.06_sec</TD>
-</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+<TR ALIGN='LEFT'>    <TD>compiler_memory=669340_KB</TD>
+    <TD>compiler_time=32.16_sec</TD>
+    <TD>simulation_image_code=3063 KB</TD>
+    <TD>simulation_image_data=561 KB</TD>
+</TR><TR ALIGN='LEFT'>    <TD>total_instances=3494</TD>
+    <TD>total_nets=0</TD>
+    <TD>total_processes=11746</TD>
+    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
